--- a/bikes/nimbus.html
+++ b/bikes/nimbus.html
@@ -60,7 +60,7 @@
           <div class="bike-buy-now">
             <p class="font-2-l color-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
             <div class="bike-marketing">
-              <a href="../purchase.html" class="main-button">Comprar Agora</a>
+              <a href="../purchase.html?type=bikcraft&product=nimbus" class="main-button">Comprar Agora</a>
               <span class="font-1-xs color-6">
                 <img src="../img/icones/entrega.svg" alt="">
                 Entrega em 5 dias
@@ -228,6 +228,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
