--- a/insurance.html
+++ b/insurance.html
@@ -60,7 +60,7 @@
             </ul>
           </div>
           <div class="div-transition-gradient">
-            <a href="purchase.html" class="color-4 font-1-m-b">Inscreva-se</a>
+            <a href="purchase.html?type=insurance&product=silver" class="color-4 font-1-m-b">Inscreva-se</a>
           </div>
         </div>
 
@@ -80,7 +80,7 @@
             </ul>
           </div>
           <div class="div-transition-gradient">
-            <a href="purchase.html" class="main-button font-1-m-b">Inscreva-se</a>
+            <a href="purchase.html?type=insurance&product=gold" class="main-button font-1-m-b">Inscreva-se</a>
           </div>
         </div>
       </div>
@@ -130,28 +130,28 @@
       <h2 class="font-1-xxl">perguntas frequentes<span>.</span></h2>
       <dl>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="true" aria-controls="p1">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info active" id="p1">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="false" aria-controls="p2">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info" id="p2">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="false" aria-controls="p3">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info" id="p3">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="false" aria-controls="p4">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info" id="p4">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="false" aria-controls="p5">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info" id="p5">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div class="faq-content">
-          <dt class="font-1-m-b color-11">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s color-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b color-11 btn-faq-drop" aria-expanded="false" aria-controls="p6">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd class="font-2-s color-9 info" id="p6">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
       </dl>
 
@@ -214,6 +214,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
