--- a/purchase.html
+++ b/purchase.html
@@ -94,7 +94,7 @@
             <div class="purchase-magic">
               <ul class="font-1-xs">
                 <li>
-                  <img src="img/icones/eletrica.svg" alt=" width=" 20" height="20"">
+                  <img src="img/icones/eletrica.svg" alt=" width=" 20" height="20">
                 Motor Elétrico
               </li>
               <li>
@@ -271,6 +271,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
