--- a/terms.html
+++ b/terms.html
@@ -127,6 +127,9 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
