--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <body id="contact">
   <header class="header-bg">
     <div class="header container">
-      <a class="header-logo" href="../index.html">
+      <a class="header-logo" href="index.html">
         <img src="img/logo-header.svg" alt="logo bikecraft">
         <img src="img/bikcraft.svg" alt="logo bikecraft">
       </a>
@@ -128,7 +128,7 @@
             <img src="img/icones/horario.svg" alt="">
             08-18h de seg à dom
           </span>
-        </div>    
+        </div>
       </div>
       <!-- ##### -->
       <div>
@@ -151,7 +151,7 @@
             <img src="img/icones/horario.svg" alt="">
             08-18h de seg à dom
           </span>
-        </div>    
+        </div>
       </div>
     </div>
   </section>
@@ -213,6 +213,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
