--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
