--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
 
   <main class="title-bg">
     <div class="container title">
-      <p class="color-5 font-2-l-b">Respostas em até 24H</p>
-      <h1 class="font-1-xxl color-0">nosso contato<span>.</span></h1>
+      <p class="color-5 font-2-l-b fadeInDown "data-anime="200">Respostas em até 24H</p>
+      <h1 class="font-1-xxl color-0 fadeInDown " data-anime="200">nosso contato<span>.</span></h1>
     </div>
 
-    <div class="contact-us container">
-      <div class="contact-us-adress font-2-s color-4">
+    <div class="contact-us container fadeInDown">
+      <div class="contact-us-adress font-2-s color-4 fadeInRight"data-anime="400">
         <h3 class="font-1-m color-0">Loja Online</h3>
         <div class="contact-adress">
           <span>
@@ -81,7 +81,7 @@
         </footer>
       </div>
 
-      <div class="contact-us-form">
+      <div class="contact-us-form fadeInLeft"data-anime="400">
         <form action="#">
           <div>
             <label for="name" class="font-1-m">Nome</label>
@@ -213,6 +213,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/plugins/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
