--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
   <main class="main-bg">
     <div class="main container">
       <div class="main-content">
-        <h1 class="font-1-xxl">Bicicletas feitas sob medida.</h1>
-        <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="font-1-xxl fadeInDown" data-anime="100">Bicicletas feitas sob medida.</h1>
+        <p class="font-2-l fadeInDown" data-anime="200">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <div class="div-transition-gradient">
-          <a href="our-bikes.html" class="main-button">Selecione a sua</a>
+          <a href="our-bikes.html" class="main-button fadeInDown" data-anime="300">Selecione a sua</a>
         </div>
       </div>
       <div class="main-banner">
-        <img src="img/bicicletas/nimbus-att.jpg" alt="imagem da nimbus dark">
+        <img data-anime="400" class="fadeInDown"src="img/bicicletas/nimbus-att.jpg" alt="imagem da nimbus dark">
       </div>
     </div>
   </main>
 
   <article class="bikelist">
-    <h2 class="container font-1-xxl">
+    <h2 class="container font-1-xxl fadeInDown"data-anime="600">
       escolha a sua.
     </h2>
     <ul class="bikelist-items font-1-xl">
@@ -256,6 +256,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/plugins/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
