--- a/our-bikes.html
+++ b/our-bikes.html
@@ -39,17 +39,17 @@
   <main>
     <div class="title-bg">
       <div class="container title">
-        <p class="color-5 font-2-l-b">Escolha a melhor pra você</p>
-        <h1 class="font-1-xxl color-0">nossas bicicletas<span>.</span></h1>
+        <p class="color-5 font-2-l-b fadeInDown" data-anime="200">Escolha a melhor pra você</p>
+        <h1 class="font-1-xxl color-0 fadeInDown" data-anime="200">nossas bicicletas<span>.</span></h1>
       </div>
     </div>
 
     <div class="our-bikes container">
-      <div class="our-bikes-image">
+      <div class="our-bikes-image fadeInLeft" data-anime="200">
         <img src="img/bicicletas/nimbus.jpg" alt="">
         <span class="our-bike-price">R$ 3999</span>
       </div>
-      <div class="our-bikes-content">
+      <div class="our-bikes-content fadeInRight" data-anime="200">
         <h2 class="font-1-xl">Nimbus Stark</h2>
         <p class="font-2-s color-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="our-bikes-inner-container">
@@ -79,11 +79,11 @@
 
     <div class="our-bikes-bg">
       <div class="our-bikes container">
-        <div class="our-bikes-image">
+        <div class="our-bikes-image fadeInLeft" data-anime="200">
           <img src="img/bicicletas/magic.jpg" alt="">
           <span class="our-bike-price">R$ 5999</span>
         </div>
-        <div class="our-bikes-content">
+        <div class="our-bikes-content fadeInRight" data-anime="200">
           <h2 class="font-1-xl color-0">Magic Might</h2>
           <p class="font-2-s color-6">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="our-bikes-inner-container">
@@ -204,6 +204,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/plugins/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
