--- a/insurance.html
+++ b/insurance.html
@@ -40,13 +40,13 @@
     <div class="title-bg">
       <div class="container title">
         <p class="color-5 font-2-l-b">escolha o seguro</p>
-        <h1 class="font-1-xxl color-0">você seguro<span>.</span></h1>
+        <h1 class="font-1-xxl color-0 fadeInDown" data-anime="200">você seguro<span>.</span></h1>
       </div>
     </div>
 
     <section class="purchase-bg" aria-label="section purchase">
       <div class="container purchase">
-        <div class="silver-sub">
+        <div class="silver-sub fadeInLeft" data-anime="300">
           <div class="silver-info">
             <span class="font-1-xl color-6">Prata</span>
             <span class="font-1-xl color-0 price">R$ 199</span>
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <div class="gold-sub">
+        <div class="gold-sub fadeInRight" data-anime="300">
           <div class="gold-info">
             <span class="font-1-xl primmary-1">Ouro</span>
             <span class="font-1-xl color-0 price">R$ 299</span>
@@ -214,6 +214,7 @@
       <p class="font-2-m color-6 copy">Bikcraft &copy; Alguns direitos reservados</p>
     </div>
   </footer>
+  <script src="js/plugins/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
